<resources>
    <string name="app_name">GoodFood</string>
    <string name="app_name_debug">GoodFood Debug</string>
    <string name="label_navigation_recipes">Recipes</string>
    <string name="label_recipes_overview">My recipes</string>
    <string name="label_navigation_cart">Cart</string>
    <string name="label_navigation_profile">Profile</string>
    <string name="add_recipe_label">Add new recipe</string>
    <string name="add_product_label">Add new product</string>
    <string name="add_ingredient_label">Add ingredient</string>
    <string name="product_name_placeholder_label">Product name</string>
    <string name="category_select_label">Select a category</string>
    <string name="unit_select_label">Select units</string>
    <string name="add_label">Add</string>
    <string name="add_more_label">Add more</string>
    <string name="recipe_name_placeholder_label">Recipe name</string>
    <string name="description_label">Description</string>
    <string name="delete_action_label">Delete</string>
    <string name="snackbar_item_deleted">\"%s\" was removed.</string>
    <string name="label_name_error">Field shouldn\'t be empty.</string>
    <string name="label_category_error">Select category.</string>
    <string name="label_product_units_error">Select units.</string>
    <string name="ingredient_hint">Ingredient</string>
    <string name="amount_label">Amount</string>
    <string name="recipe_instructions_label">Instructions</string>
    <string name="recipe_name_label">Recipe name</string>
    <string name="ingredients_label">Ingredients</string>
    <string name="recipe_category_label">Recipe category</string>
    <string name="recipe_photo_label">Recipe photo</string>
    <string name="save_label">Save</string>
    <string name="take_photo_action_label">Take photo</string>
    <string name="choose_photo_action_label">Choose photo</string>
    <string name="remove_photo_action_label">Remove photo</string>
    <string name="label_empty_ingredients_list">You not added ingredients yet!</string>
    <string name="label_servings">Servings</string>
    <string name="label_no_category">No category</string>
    <string name="label_all_recipes">All recipes</string>
    <string name="label_favorites">Favorites</string>
    <string name="label_frequent_recipes">Frequent recipes</string>
    <string name="description_recipe_placeholder">Placeholder for recipe photo</string>
    <string name="description_recipe_photo">Recipe photo</string>
    <string name="description_no_data">You don\'t recorded any recipes yet!</string>
    <string name="label_more">more</string>
    <string name="label_edit_recipe">Edit recipe</string>
    <string name="label_mark_as_cooked">Mark as cooked</string>
    <string name="label_recipe">Recipe</string>
    <string name="label_last_cooked">Last cooked: %s.</string>
    <string name="label_never">never</string>
    <string name="label_add_to_cart">Add ingredients to cart</string>
    <string name="description_ingredients_placeholder">Empty ingredients list placeholder</string>
    <string name="label_delete_recipe">Delete recipe</string>
    <string name="label_cart">Cart</string>
    <string name="label_added_to_cart">Ingredients in your cart!</string>
    <string name="label_remove">Remove</string>
    <string name="label_empty_cart">Your cart is empty!</string>
    <string name="label_clear_cart">Clear cart</string>
    <string name="label_remove_purchased">Remove purchased</string>
    <string name="label_settings">Settings</string>
    <string name="label_backup_amp_restore"><![CDATA[Backup & restore]]></string>
    <string name="label_manage_products">Manage products</string>
    <string name="label_manage_categories">Manage categories</string>

    <string name="label_dark_theme">Dark theme</string>
    <string name="label_light_theme">Light theme</string>
    <string name="label_follow_system">Follow system</string>
    <string name="label_follow_saver">Follow battery saver</string>

    <string name="label_recipe_prefs">Recipe preferences</string>
    <string name="label_app_prefs">App preferences</string>

    <string name="label_default_servings">Servings count</string>
    <string name="desc_default_servings">Default count of servings</string>
    <string name="label_app_theme">App theme</string>
    <string name="label_change_category_name">Rename category</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_name">Name</string>
    <string name="label_change_product_name">Rename product</string>

    <string-array name="labels_app_theme_new">
        <item>@string/label_follow_system</item>
        <item>@string/label_light_theme</item>
        <item>@string/label_dark_theme</item>
    </string-array>

    <string-array name="labels_app_theme_old">
        <item>@string/label_follow_saver</item>
        <item>@string/label_light_theme</item>
        <item>@string/label_dark_theme</item>
    </string-array>
</resources>