<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bsdProductsContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_product_label"
        android:textAlignment="center"
        android:textColor="?attr/colorOnSurface"
        android:textSize="26sp"
        android:layout_marginBottom="@dimen/bottom_sheet_fields_margin"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilProductName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name_placeholder_label"
        android:layout_marginBottom="@dimen/bottom_sheet_fields_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bAddProduct"
        android:text="@string/add_label"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"/>
</LinearLayout>