<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ablAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:titleTextColor="?attr/colorOnSurface"
            app:titleMarginStart="@dimen/layout_start_margin"
            app:title="Add new recipe" >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bSaveRecipe"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/layout_end_margin"
                android:layout_gravity="end"
                android:text="@string/save_label" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvRecipePhoto"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="@id/endMargin"
                app:layout_constraintStart_toStartOf="@id/startMargin"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:id="@+id/ivRecipePhotoPlaceholder"
                android:src="@drawable/ic_add_photo"
                android:contentDescription="@string/recipe_photo_label"
                android:elevation="2dp"
                app:tint="?attr/colorOnSurface"
                app:layout_constraintTop_toTopOf="@id/cvRecipePhoto"
                app:layout_constraintStart_toStartOf="@id/cvRecipePhoto"
                app:layout_constraintEnd_toEndOf="@id/cvRecipePhoto"
                app:layout_constraintBottom_toBottomOf="@id/cvRecipePhoto" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRecipeName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/recipe_name_label"
                app:layout_constraintEnd_toStartOf="@id/endMargin"
                app:layout_constraintStart_toStartOf="@id/startMargin"
                app:layout_constraintTop_toBottomOf="@id/cvRecipePhoto">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textCapSentences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDescription"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/recipe_instructions_label"
                app:layout_constraintEnd_toStartOf="@id/endMargin"
                app:layout_constraintStart_toStartOf="@id/startMargin"
                app:layout_constraintTop_toBottomOf="@id/tilRecipeName">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine|textCapSentences" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRecipeCategory"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/recipe_category_label"
                app:layout_constraintEnd_toStartOf="@id/endMargin"
                app:layout_constraintStart_toStartOf="@id/startMargin"
                app:layout_constraintTop_toBottomOf="@id/tilDescription">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvIngredientsSection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ingredients_label"
                android:textColor="?attr/colorOnSurface"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/endMargin"
                app:layout_constraintStart_toStartOf="@id/startMargin"
                app:layout_constraintTop_toBottomOf="@id/tilRecipeCategory" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvIngredientsList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:overScrollMode="never"
                app:layout_constraintEnd_toEndOf="@id/endMargin"
                app:layout_constraintStart_toStartOf="@id/startMargin"
                app:layout_constraintTop_toBottomOf="@id/tvIngredientsSection" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bAddIngredient"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/add_ingredient_label"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                app:layout_constraintEnd_toEndOf="@id/endMargin"
                app:layout_constraintStart_toStartOf="@id/startMargin"
                app:layout_constraintTop_toBottomOf="@id/rvIngredientsList" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/startMargin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/layout_start_margin" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/endMargin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/layout_end_margin" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>